--- a/frontend exercises/page1.html
+++ b/frontend exercises/page1.html
@@ -33,7 +33,7 @@
 
 <p>by <i>Charles Dickens</i>, published by <b>Chapman and Hall</b> in 1859.</p>
 
-<p><a href="index.html">< Back to Home Page</a></p>
+<p><a href="index.html"> Back to Home Page</a></p>
     
 </body>
 </html>
